--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -12,4 +12,9 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = adafruit/DHT sensor library@^1.4.6
+lib_deps = 
+	adafruit/DHT sensor library@^1.4.6
+	esphome/ESPAsyncWebServer-esphome@^3.2.2
+monitor_speed = 115200
+platform_packages =
+    platformio/framework-arduinoespressif8266 @ https://github.com/esp8266/Arduino.git
